Replace - with None

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,24 +1,24 @@
 # Skills
 # AI
 - skill: Artificial Intelligence
-  description: -
+  description: None
   
 # Data Science
 - skill: Data Science
-  description: -
+  description: None
 
 # Scientific Computing
 - skill: Scientific Computing
-  description: -
+  description: None
 
 # NLP
 - skill: Natural Language Processing
-  description: -
+  description: None
 
 # Analytical Reasoning
 - skill: Analytical Reasoning
-  description: -
+  description: None
 
 #Adaptability
 - skill: Adaptability
-  description: -
+  description: None
