--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Vijay Alagappan A."
-resume_title:                   "AI, Autonomous Systems and CAE Simulations Engineer"
+resume_title:                   "AI, CAE and Autonomous Systems Engineer"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "xxxxxxxxxxxxxxx@gmail.com"
+resume_contact_email:           "x.xxxxx.xxxxxxxxx@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+91-xxxxxxxxxx"
@@ -23,7 +23,7 @@ resume_contact_address:         "xxxxx, ITPL, Whitefield, Bangalore"
 resume_header_contact_info:     "xxxxx, ITPL, Whitefield, Bangalore • +91-xxxxxxxxxx • xxxxxxxxxxxxxxx@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>An aficionado of engineering, I love machines - from hard metal to soft code! While the idea of 'creating systems' inspires and energizes me, the act of setting them 'up and working' drives me and keeps me going. Yes, I get a kick out of designing and developing new products and systems! My formal education background is in the domain of mechanical engineering and my work experience is in the field of automotive structures. I create simulation models, analyse and evaluate a huge amount of simulation data. This is where I got acquainted with the field of data science. I have been taking up courses on coding with Python, machine learning and deep learning algorithms and data visualization and applying these concepts to automate the process of buidling simulation models and evaluating results to come up with lightweight and safe body-in-white designs. I also spend my free time learning a bit of electronics with hobby projects on robotics, computer vision and IoT. Armed with the knowledge and skill in these 3 domains - mechanical, software and electronics, I want to build stuff, make them work and solve problems to make the world a better place to live in!</p>"
+resume_header_intro: "<p>An aficionado of engineering, I love machines - from hard metal to soft code! While the idea of 'creating systems' inspires and energizes me, the act of setting them 'up and working' drives me and keeps me going. Yes, I get a kick out of designing and developing new products and systems! My formal education background is in the domain of mechanical engineering and my work experience is in the field of automotive structures. I create simulation models, analyse and evaluate a huge amount of simulation data. This is where I got acquainted with the field of data science. I have been taking up courses on coding with Python, data analysis, machine learning, deep learning, computer vision, NLP and applying these concepts to automate the process of building simulation models and evaluating results to come up with lightweight and safe body-in-white designs. I also spend my free time learning a bit of electronics with hobby projects on robotics, computer vision and IoT. Armed with the knowledge and skill in these 3 domains - mechanical, software and electronics, I want to build stuff, make them work and solve problems to make the world a better place to live in!</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -40,7 +40,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
-# resume_section_interests:       true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
