--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,16 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+# Self-Driving Cars course projects
+- project: Modules on Perception, Path Planning, Control and System Integration
+  role: Student 
+  duration: 2019 &mdash; Present
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
-
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+  description: I did multiple projects in the various modules on perception, path planning, control and system integration such as lane finding, traffic sign recognition, behavioural cloning, Extended Kalman filters, Particle Filters, PID Control and Integration using ROS. I used Python and/or C++ for all the projects.
+  
+# Web-based German word learning game 
+- project: Web app to learn German words
+  role: Developer
+  duration: 2016 &mdash; 2017
   # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+  description: I created this web app to help and motivate my colleagues learn German words since the primary language of communication in the parent firm headquarters was German. I used a rather old and outdated CGI scripting technology with Python, HTML, CSS and Javascript.
