--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://www.udacity.com/course/self-driving-car-engineer-nanodegree--nd013"
+  description: Self Driving Car Engineer Nanodegree
+- url: "https://mbrdi.co.in/"
+  description: Mercedes-Benz Research & Development India Pvt. Ltd.
