add current udacity course

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,9 @@
 # Degree
+- degree: Self-Driving Car Engineer Nanodegree @ School of Autonomous Systems
+  uni: Udacity
+  year: Ongoing
+  summary: Learning to program various modules of a self-driving car such as Perception, Planning, Control and Integration. Course includes topics such topics such as Lane Finding, Behavioural Cloning, Traffic Sign Classification, Scene Understanding, Fully Convolutional Networks, Object Detection, Sensor Fusion and Localization (using Kalman Filters and Particle Filters), Path Planning, PID and Model Predictive Control, integration using Robot Operating System, Functional Safety
+
 - degree: Master of Science (by Research) @ Dept. of Engineering Design
   uni: Indian Institute of Technology Madras
   year: 2010 &mdash; 2014
