add links to university, college website

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -3,3 +3,7 @@
   description: Self Driving Car Engineer Nanodegree
 - url: "https://mbrdi.co.in/"
   description: Mercedes-Benz Research & Development India Pvt. Ltd.
+- url: "https://www.iitm.ac.in/"
+  description: Indian Institute of Technology, Madras
+- url: "https://www.tce.edu/"
+  description: Thiagarajar College of Engineering, Madurai (affiliated to Anna University, Chennai)
