change : to - on line 5 to fix .yaml syntax error

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # Self-Driving Cars course projects
-- project: Programming a real self-driving car: Capstone Project
+- project: Programming a real self-driving car - Capstone Project
   role: Student, Team Lead
   duration: October 2019 &mdash; Present
   url: "https://github.com/vjmechwiz/CarND-Capstone"
