fix punctuation in line 3 and 4

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Artificial Intelligence
-- skill: Artificial Intelligence, Machine Learning, Deep Learning.
-  description: 3 years of experience in applying machine learning algorithms for simulation data analysis and assistance in building simulation models and evaluating results. Comfortable using scikit learn tensorflow, keras,
+- skill: Artificial Intelligence/Machine Learning/Deep Learning.
+  description: 3 years of experience in applying machine learning algorithms for simulation data analysis and assistance in building simulation models and evaluating results. Comfortable using scikit-learn,tensorflow and keras libraries.
   
 # Simulation Data Science
 - skill: Simulation Data Science
