add | symbol at beginning of first 2 summaries

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: Senior CAE Analyst
   duration: Oct, 2016 &mdash; Present
-  summary: Handled independent responsibility for evaluation of a few crash loadcases from India in pre-development stage.
+  summary: | Handled independent responsibility for evaluation of a few crash loadcases from India in pre-development stage.
   
 Collaborated with Design teams in parent headquarters for development of next generation architecture for EVs.
   
@@ -19,7 +19,7 @@ Trained new recruits for building crash models and evaluating performance.
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: CAE Analyst
   duration:  Feb, 2014 &mdash; Sept, 2016
-  summary: Responsible for setting up full vehicle simulations for pre-development stage.
+  summary: | Responsible for setting up full vehicle simulations for pre-development stage.
   
 Responsible for setting up component/subsystem simulations for research. I investigated different concepts for smaller parts, correlated with test results.
 
