--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,21 +3,23 @@
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: Senior CAE Analyst
   duration: Oct, 2016 &mdash; Present
-  summary: | Handled independent responsibility for evaluation of a few crash loadcases from India in pre-development stage.
-Collaborated with Design teams in parent headquarters for development of next generation architecture for EVs.
-Created Artificial Intelligence based applications for automating model preparation, extraction and analysis of results as well as documentation.
-Trained engineers and intern for automation using Python and Artificial Intelligence algorithms.
-Supported modelling and evaluation for a few crash loadcases in series-development stage.
-Trained new recruits for building crash models and evaluating performance.
+  summary: | 
+  Handled independent responsibility for evaluation of a few crash loadcases from India in pre-development stage.
+  Collaborated with Design teams in parent headquarters for development of next generation architecture for EVs.
+  Created Artificial Intelligence based applications for automating model preparation, extraction and analysis of results as well as documentation.
+  Trained engineers and intern for automation using Python and Artificial Intelligence algorithms.
+  Supported modelling and evaluation for a few crash loadcases in series-development stage.
+  Trained new recruits for building crash models and evaluating performance.
 
 # CAE Analyst
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: CAE Analyst
   duration:  Feb, 2014 &mdash; Sept, 2016
-  summary: | Responsible for setting up full vehicle simulations for pre-development stage.
-Responsible for setting up component/subsystem simulations for research. I investigated different concepts for smaller parts, correlated with test results.
-Created Python scripts to automate manual and repetitive tasks.
-Overcame language barriers with engineers at parent R&D headquarters by taking up 5 German courses (Level B2.2)
+  summary: | 
+  Responsible for setting up full vehicle simulations for pre-development stage.
+  Responsible for setting up component/subsystem simulations for research. I investigated different concepts for smaller parts, correlated with test results.
+  Created Python scripts to automate manual and repetitive tasks.
+  Overcame language barriers with engineers at parent R&D headquarters by taking up 5 German courses (Level B2.2)
 
   # Post Graduate Engineer Trainee
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
