remove \n and points, use para for summary

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,23 +3,13 @@
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: Senior CAE Analyst
   duration: Oct, 2016 &mdash; Present
-  summary: | 
-  Handled independent responsibility for evaluation of a few crash loadcases from India in pre-development stage.\n
-  Collaborated with Design teams in parent headquarters for development of next generation architecture for EVs.\n
-  Created Artificial Intelligence based applications for automating model preparation, extraction and analysis of results as well as documentation.\n
-  Trained engineers and intern for automation using Python and Artificial Intelligence algorithms.\n
-  Supported modelling and evaluation for a few crash loadcases in series-development stage.\n
-  Trained new recruits for building crash models and evaluating performance.\n
+  summary: I collaborate with design teams in parent headquarters in Germany to develop next generation architecture for EVs. I am creating Artificial Intelligence based applications to aid computer modelling and evaluation of crash safety using computer vision, deep learning and NLP algorithms. I also training engineers and an intern for automation using Python and Artificial Intelligence algorithms. I handled independent responsibility for evaluation of load-cases in pre-development stage. I trained new recruits for building simulation models and analysing results.
 
 # CAE Analyst
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
   position: CAE Analyst
   duration:  Feb, 2014 &mdash; Sept, 2016
-  summary: | 
-  Responsible for setting up full vehicle simulations for pre-development stage.\n
-  Responsible for setting up component/subsystem simulations and correlation with test results for research.\n 
-  Created Python scripts to automate manual and repetitive tasks.\n
-  Overcame language barriers with engineers at parent R&D headquarters by taking up 5 German courses (Level B2.2)\n
+  summary: I was responsible for setting up full vehicle simulations for new concepts in the pre-development stage. I was also responsible for setting up component/subsystem simulations and correlation with test results for research. I created Python scripts to automate manual and repetitive tasks. Overcame language barriers with engineers at parent R&D headquarters by taking up 5 German courses (Level B2.2).
 
   # Post Graduate Engineer Trainee
 - company: Mercedes-Benz Research and Development India Pvt. Ltd.
